ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
/* ... */
.qbGrid .editing {
    box-shadow: 0 0 0 0 $qbgrid-cell-edit-background-color, 0 0 0 0 $qbgrid-cell-edit-background-color, 0 0 20px 10px rgba($border-shadow-base-color, 0.5);
    margin-top: -15px;
    z-index: 999;
    background-color: $qbgrid-cell-edit-background-color;
    border-top: $cell-edit-background-edit;

    > td:first-child {
        padding-left: 4px;
        border-left: 1px solid $qbgrid-row-border-color;
    }

    > td {
        border-top: 2px solid $cell-edit-background-edit;
        overflow: visible;
        margin: 0;
        border-right: 1px solid $row-border-color;

        .cellWrapper {
            display: flex;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            z-index: 1;

            textarea.cellEdit {

                overflow: hidden;
                box-sizing: border-box;
            }

            &.editingCell {
                display: inline-block;
                padding-bottom: 20px;
                margin-top: -6px;

                .nonEditable {
                    margin: 1px;
                    cursor: not-allowed;
                }

                &.dateTimeField > * {
                    border: 0;

                    .input-group.date input.form-control {
                        border: 0;
                        padding: 0;
                        font-size: 12px;
                        height: 25px;
                        border-radius: 0;
                    }

                    .input-group.date .input-group-addon {
                        background: $color-black-100;
                        height: 21px;
                        padding: 0;
                        border: 0;
                        color: $iconfont-on-light-normal-color;
                    }
                }

                &.input-group {
                    flex: 1 1 auto;
                    display: flex;
                    flex-direction: row;
                    margin-right: 0;
                    padding-right: 0;
                    border-right: 0;

                    > input {
                        flex: 1 1 auto;
                        border-radius: 0;
                        border: 0;
                        height: 21px;
                        margin-right: 1px;
                        font-size: $grid-font-size;
                        padding-left: 2px;
                    }

                    > span.dropdown {
                        flex: 0 0 auto;
                        width: 20px;

                        button {
                            padding-left: 4px;
                            padding-top: 0;
                            height: 21px;
                            width: 20px;
                            border-radius: 0;
                        }
                    }
                }
            }
        }
    }
}

.actionsCol .iconActions {
    line-height: inherit;

    .dropdown-menu a {
        padding-left: 4px;

        .qbIcon {
            margin-right: 6px;
            vertical-align: middle;
            width: 28px;
            padding: 4px;
        }

        &:hover {
            .qbIcon {
                color: $color-black-100;
            }

            .qbIcon.print {
                background-color: $print-icon-normal-color;
            }

            .qbIcon.email {
                background-color: $mail-icon-normal-color;
            }

            .qbIcon.duplicate {
                background-color: $copy-icon-normal-color;
            }

            .qbIcon.delete {
                background-color: $delete-icon-normal-color;
            }
        }
    }

    .iconActionButton {
        opacity: 0.2;
        transition: opacity 200ms ease-in-out;
        height: 30px;
        width: auto;
        background: inherit;

        &:hover {
            color: $topnav-icon-color;
        }
    }

    .qbIcon.print {
        color: $print-icon-normal-color;
    }

    .qbIcon.email {
        color: $mail-icon-normal-color;
    }

    .qbIcon.duplicate {
        color: $copy-icon-normal-color;
    }

    .qbIcon.delete {
        color: $delete-icon-normal-color;
    }
}

.actionsCol:hover .iconActions .iconActionButton {
    transition: opacity 200ms ease-in-out;
    opacity: 1;
}

.multiLineTextCell {
    border: 0;
    font-family: $font-family;
    font-size: $grid-font-size;
    border-radius: 0;
    color: $font-color;
}
//The style here is for sticky column
.qbGrid > tbody > tr > td:first-of-type {
    background: $row-bg-color;
    z-index: 2;
}

.qbGrid > tbody > tr.editing > td:first-of-type {
    z-index: 3;
}

.stickyCell {
    position: relative;
    z-index: 3;
}

th.qbHeaderCell.stickyCell {
    z-index: 3;
}

.stickyCell .dropdown-menu {
    top: 0;
    left: 27px;
}

